--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "WIP - nothing to see here",
   "main": "index.js",
   "dependencies": {
-    "JSONStream": "^1.3.3",
     "node-core-commit-stream": "^1.0.0",
     "npm-package-download-counts": "^1.0.2",
     "pump": "^3.0.0",
     "simple-get": "^3.0.2",
+    "split2": "^2.2.0",
     "stream-each": "^1.2.2"
   },
   "devDependencies": {
